@@ -8,7 +8,6 @@ package org.hibernate.query.sqm.mutation.internal.cte;
 
 import java.util.AbstractMap;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.IdentityHashMap;
 import java.util.LinkedHashMap;
@@ -22,38 +21,33 @@ import org.hibernate.dialect.temptable.TemporaryTable;
 import org.hibernate.engine.jdbc.spi.JdbcServices;
 import org.hibernate.engine.spi.SessionFactoryImplementor;
 import org.hibernate.id.BulkInsertionCapableIdentifierGenerator;
-import org.hibernate.id.IdentifierGenerator;
 import org.hibernate.id.OptimizableGenerator;
-import org.hibernate.id.PostInsertIdentifierGenerator;
 import org.hibernate.id.enhanced.Optimizer;
 import org.hibernate.internal.util.collections.CollectionHelper;
 import org.hibernate.internal.util.collections.Stack;
 import org.hibernate.metamodel.mapping.BasicValuedMapping;
 import org.hibernate.metamodel.mapping.EntityIdentifierMapping;
 import org.hibernate.metamodel.mapping.EntityMappingType;
-import org.hibernate.metamodel.mapping.JdbcMapping;
 import org.hibernate.metamodel.mapping.MappingModelExpressible;
 import org.hibernate.metamodel.mapping.SqlExpressible;
 import org.hibernate.persister.entity.AbstractEntityPersister;
 import org.hibernate.persister.entity.EntityPersister;
 import org.hibernate.persister.entity.Joinable;
-import org.hibernate.query.sqm.BinaryArithmeticOperator;
-import org.hibernate.query.sqm.ComparisonOperator;
-import org.hibernate.spi.NavigablePath;
 import org.hibernate.query.SemanticException;
-import org.hibernate.query.sqm.SortOrder;
 import org.hibernate.query.results.TableGroupImpl;
 import org.hibernate.query.spi.DomainQueryExecutionContext;
-import org.hibernate.query.sqm.function.SelfRenderingFunctionSqlAstExpression;
+import org.hibernate.query.sqm.BinaryArithmeticOperator;
+import org.hibernate.query.sqm.ComparisonOperator;
+import org.hibernate.query.sqm.SortOrder;
 import org.hibernate.query.sqm.internal.DomainParameterXref;
 import org.hibernate.query.sqm.internal.SqmJdbcExecutionContextAdapter;
 import org.hibernate.query.sqm.internal.SqmUtil;
 import org.hibernate.query.sqm.mutation.internal.InsertHandler;
 import org.hibernate.query.sqm.mutation.internal.MultiTableSqmMutationConverter;
+import org.hibernate.query.sqm.mutation.internal.SqmInsertStrategyHelper;
 import org.hibernate.query.sqm.spi.SqmParameterMappingModelResolutionAccess;
 import org.hibernate.query.sqm.sql.BaseSqmToSqlAstConverter;
-import org.hibernate.query.sqm.tree.cte.SqmCteTable;
-import org.hibernate.query.sqm.tree.cte.SqmCteTableColumn;
+import org.hibernate.query.sqm.sql.internal.SqmPathInterpretation;
 import org.hibernate.query.sqm.tree.expression.SqmExpression;
 import org.hibernate.query.sqm.tree.expression.SqmParameter;
 import org.hibernate.query.sqm.tree.expression.SqmStar;
@@ -61,6 +55,7 @@ import org.hibernate.query.sqm.tree.insert.SqmInsertSelectStatement;
 import org.hibernate.query.sqm.tree.insert.SqmInsertStatement;
 import org.hibernate.query.sqm.tree.insert.SqmInsertValuesStatement;
 import org.hibernate.query.sqm.tree.insert.SqmValues;
+import org.hibernate.spi.NavigablePath;
 import org.hibernate.sql.ast.SqlAstJoinType;
 import org.hibernate.sql.ast.SqlAstTranslator;
 import org.hibernate.sql.ast.spi.SqlAstProcessingState;
@@ -75,7 +70,6 @@ import org.hibernate.sql.ast.tree.expression.BinaryArithmeticExpression;
 import org.hibernate.sql.ast.tree.expression.ColumnReference;
 import org.hibernate.sql.ast.tree.expression.Expression;
 import org.hibernate.sql.ast.tree.expression.JdbcParameter;
-import org.hibernate.sql.ast.tree.expression.Over;
 import org.hibernate.sql.ast.tree.expression.QueryLiteral;
 import org.hibernate.sql.ast.tree.expression.SelfRenderingSqlFragmentExpression;
 import org.hibernate.sql.ast.tree.from.NamedTableReference;
@@ -85,7 +79,7 @@ import org.hibernate.sql.ast.tree.from.TableReference;
 import org.hibernate.sql.ast.tree.from.TableReferenceJoin;
 import org.hibernate.sql.ast.tree.from.UnionTableReference;
 import org.hibernate.sql.ast.tree.from.ValuesTableGroup;
-import org.hibernate.sql.ast.tree.insert.InsertStatement;
+import org.hibernate.sql.ast.tree.insert.InsertSelectStatement;
 import org.hibernate.sql.ast.tree.insert.Values;
 import org.hibernate.sql.ast.tree.predicate.ComparisonPredicate;
 import org.hibernate.sql.ast.tree.select.QueryPart;
@@ -93,13 +87,13 @@ import org.hibernate.sql.ast.tree.select.QuerySpec;
 import org.hibernate.sql.ast.tree.select.SelectStatement;
 import org.hibernate.sql.ast.tree.select.SortSpecification;
 import org.hibernate.sql.ast.tree.update.Assignment;
+import org.hibernate.sql.exec.spi.JdbcOperationQuerySelect;
 import org.hibernate.sql.exec.spi.JdbcParameterBindings;
-import org.hibernate.sql.exec.spi.JdbcSelect;
 import org.hibernate.sql.results.graph.DomainResult;
 import org.hibernate.sql.results.graph.basic.BasicResult;
 import org.hibernate.sql.results.internal.SqlSelectionImpl;
 import org.hibernate.sql.results.spi.ListResultsConsumer;
-import org.hibernate.type.BasicType;
+import org.hibernate.generator.Generator;
 import org.hibernate.type.spi.TypeConfiguration;
 
 /**
@@ -116,11 +110,11 @@ public class CteInsertHandler implements InsertHandler {
 
 	private final SessionFactoryImplementor sessionFactory;
 	private final EntityMappingType entityDescriptor;
-	private final SqmCteTable cteTable;
+	private final CteTable cteTable;
 	private final DomainParameterXref domainParameterXref;
 
 	public CteInsertHandler(
-			SqmCteTable cteTable,
+			CteTable cteTable,
 			SqmInsertStatement<?> sqmStatement,
 			DomainParameterXref domainParameterXref,
 			SessionFactoryImplementor sessionFactory) {
@@ -136,6 +130,16 @@ public class CteInsertHandler implements InsertHandler {
 		this.domainParameterXref = domainParameterXref;
 	}
 
+	public static CteTable createCteTable(
+			CteTable sqmCteTable,
+			List<CteColumn> sqmCteColumns,
+			SessionFactoryImplementor factory) {
+		return new CteTable(
+				sqmCteTable.getTableExpression(),
+				sqmCteColumns
+		);
+	}
+
 	public SqmInsertStatement<?> getSqmStatement() {
 		return sqmStatement;
 	}
@@ -144,7 +148,7 @@ public class CteInsertHandler implements InsertHandler {
 		return entityDescriptor;
 	}
 
-	public SqmCteTable getCteTable() {
+	public CteTable getCteTable() {
 		return cteTable;
 	}
 
@@ -187,37 +191,40 @@ public class CteInsertHandler implements InsertHandler {
 		// information about the target paths
 
 		final int size = sqmStatement.getInsertionTargetPaths().size();
-		final List<Map.Entry<SqmCteTableColumn, Assignment>> targetPathColumns = new ArrayList<>( size );
-		final List<SqmCteTableColumn> targetPathSqmCteColumns = new ArrayList<>( size );
+		final List<Map.Entry<List<CteColumn>, Assignment>> targetPathColumns = new ArrayList<>( size );
+		final List<CteColumn> targetPathCteColumns = new ArrayList<>( size );
 		final Map<SqmParameter<?>, MappingModelExpressible<?>> paramTypeResolutions = new LinkedHashMap<>();
 		final NamedTableReference entityTableReference = new NamedTableReference(
-				cteTable.getCteName(),
+				cteTable.getTableExpression(),
 				TemporaryTable.DEFAULT_ALIAS,
-				true,
-				sessionFactory
+				true
 		);
-		final InsertStatement insertStatement = new InsertStatement( entityTableReference );
+		final InsertSelectStatement insertStatement = new InsertSelectStatement( entityTableReference );
 
 		final BaseSqmToSqlAstConverter.AdditionalInsertValues additionalInsertValues = sqmConverter.visitInsertionTargetPaths(
 				(assignable, columnReferences) -> {
-					// Find a matching cte table column and set that at the current index
-					for ( SqmCteTableColumn column : cteTable.getColumns() ) {
-						if ( column.getType() == ( (Expression) assignable ).getExpressionType() ) {
-							insertStatement.addTargetColumnReferences( columnReferences );
-							targetPathSqmCteColumns.add( column );
-							targetPathColumns.add(
-									new AbstractMap.SimpleEntry<>(
-											column,
-											new Assignment(
-													assignable,
-													(Expression) assignable
-											)
-									)
-							);
-							return;
-						}
+					final SqmPathInterpretation<?> pathInterpretation = (SqmPathInterpretation<?>) assignable;
+					final int offset = CteTable.determineModelPartStartIndex(
+							entityDescriptor,
+							pathInterpretation.getExpressionType()
+					);
+					if ( offset == -1 ) {
+						throw new IllegalStateException( "Couldn't find matching cte column for: " + ( (Expression) assignable ).getExpressionType() );
 					}
-					throw new IllegalStateException( "Couldn't find matching cte column for: " + ( (Expression) assignable ).getExpressionType() );
+					final int end = offset + pathInterpretation.getExpressionType().getJdbcTypeCount();
+					// Find a matching cte table column and set that at the current index
+					final List<CteColumn> columns = cteTable.getCteColumns().subList( offset, end );
+					insertStatement.addTargetColumnReferences( columnReferences );
+					targetPathCteColumns.addAll( columns );
+					targetPathColumns.add(
+							new AbstractMap.SimpleEntry<>(
+									columns,
+									new Assignment(
+											assignable,
+											(Expression) assignable
+									)
+							)
+					);
 				},
 				sqmInsertStatement,
 				entityDescriptor,
@@ -231,7 +238,7 @@ public class CteInsertHandler implements InsertHandler {
 				}
 		);
 
-		final boolean assignsId = targetPathSqmCteColumns.contains( cteTable.getColumns().get( 0 ) );
+		final boolean assignsId = targetPathCteColumns.contains( cteTable.getCteColumns().get( 0 ) );
 
 		// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 		// Create the statement that represent the source for the entity cte
@@ -246,44 +253,33 @@ public class CteInsertHandler implements InsertHandler {
 						// This returns true if the insertion target uses a sequence with an optimizer
 						// in which case we will fill the row_number column instead of the id column
 						if ( additionalInsertValues.applySelections( querySpec, sessionFactory ) ) {
-							final SqmCteTableColumn rowNumberColumn = cteTable.getColumns()
-									.get( cteTable.getColumns().size() - 1 );
+							final CteColumn rowNumberColumn = cteTable.getCteColumns()
+									.get( cteTable.getCteColumns().size() - 1 );
 							final ColumnReference columnReference = new ColumnReference(
 									(String) null,
-									rowNumberColumn.getColumnName(),
+									rowNumberColumn.getColumnExpression(),
 									false,
 									null,
 									null,
-									(JdbcMapping) rowNumberColumn.getType(),
-									sessionFactory
+									rowNumberColumn.getJdbcMapping()
 							);
-							insertStatement.getTargetColumnReferences().set(
-									insertStatement.getTargetColumnReferences().size() - 1,
+							insertStatement.getTargetColumns().set(
+									insertStatement.getTargetColumns().size() - 1,
 									columnReference
 							);
-							targetPathSqmCteColumns.set(
-									targetPathSqmCteColumns.size() - 1,
+							targetPathCteColumns.set(
+									targetPathCteColumns.size() - 1,
 									rowNumberColumn
 							);
 						}
-						if ( !assignsId && entityDescriptor.getIdentifierGenerator() instanceof PostInsertIdentifierGenerator ) {
-							final BasicType<Integer> rowNumberType = sessionFactory.getTypeConfiguration()
-									.getBasicTypeForJavaType( Integer.class );
+						if ( !assignsId && entityDescriptor.getGenerator().generatedOnExecution() ) {
 							querySpec.getSelectClause().addSqlSelection(
 									new SqlSelectionImpl(
 											1,
 											0,
-											new Over<>(
-													new SelfRenderingFunctionSqlAstExpression(
-															"row_number",
-															(appender, args, walker) -> appender.appendSql(
-																	"row_number()" ),
-															Collections.emptyList(),
-															rowNumberType,
-															rowNumberType
-													),
-													Collections.emptyList(),
-													Collections.emptyList()
+											SqmInsertStrategyHelper.createRowNumberingExpression(
+													querySpec,
+													sessionFactory
 											)
 									)
 							);
@@ -304,7 +300,7 @@ public class CteInsertHandler implements InsertHandler {
 			final NavigablePath navigablePath = new NavigablePath( entityDescriptor.getRootPathName() );
 			final List<String> columnNames = new ArrayList<>( targetPathColumns.size() );
 			final String valuesAlias = insertingTableGroup.getPrimaryTableReference().getIdentificationVariable();
-			for ( Map.Entry<SqmCteTableColumn, Assignment> entry : targetPathColumns ) {
+			for ( Map.Entry<List<CteColumn>, Assignment> entry : targetPathColumns ) {
 				for ( ColumnReference columnReference : entry.getValue().getAssignable().getColumnReferences() ) {
 					columnNames.add( columnReference.getColumnExpression() );
 					querySpec.getSelectClause().addSqlSelection(
@@ -319,9 +315,8 @@ public class CteInsertHandler implements InsertHandler {
 													false,
 													null,
 													null,
-													columnReference.getJdbcMapping(),
-													null
-											)
+													columnReference.getJdbcMapping()
+									)
 							)
 					);
 				}
@@ -341,26 +336,25 @@ public class CteInsertHandler implements InsertHandler {
 		processingStateStack.push( oldState );
 		sqmConverter.pruneTableGroupJoins();
 
-		if ( !assignsId && entityDescriptor.getIdentifierGenerator() instanceof PostInsertIdentifierGenerator ) {
+		if ( !assignsId && entityDescriptor.getGenerator().generatedOnExecution() ) {
 			// Add the row number to the assignments
-			final SqmCteTableColumn rowNumberColumn = cteTable.getColumns()
-					.get( cteTable.getColumns().size() - 1 );
+			final CteColumn rowNumberColumn = cteTable.getCteColumns()
+					.get( cteTable.getCteColumns().size() - 1 );
 			final ColumnReference columnReference = new ColumnReference(
 					(String) null,
-					rowNumberColumn.getColumnName(),
+					rowNumberColumn.getColumnExpression(),
 					false,
 					null,
 					null,
-					(JdbcMapping) rowNumberColumn.getType(),
-					sessionFactory
+					rowNumberColumn.getJdbcMapping()
 			);
-			insertStatement.getTargetColumnReferences().add( columnReference );
-			targetPathSqmCteColumns.add( rowNumberColumn );
+			insertStatement.getTargetColumns().add( columnReference );
+			targetPathCteColumns.add( rowNumberColumn );
 		}
 
-		final CteTable entityCteTable = BaseSqmToSqlAstConverter.createCteTable(
+		final CteTable entityCteTable = createCteTable(
 				getCteTable(),
-				targetPathSqmCteColumns,
+				targetPathCteColumns,
 				factory
 		);
 
@@ -371,10 +365,7 @@ public class CteInsertHandler implements InsertHandler {
 
 		final CteStatement entityCte;
 		if ( additionalInsertValues.requiresRowNumberIntermediate() ) {
-			final CteTable fullEntityCteTable = BaseSqmToSqlAstConverter.createCteTable(
-					getCteTable(),
-					factory
-			);
+			final CteTable fullEntityCteTable = getCteTable();
 			final String baseTableName = "base_" + entityCteTable.getTableExpression();
 			final CteStatement baseEntityCte = new CteStatement(
 					entityCteTable.withName( baseTableName ),
@@ -393,12 +384,11 @@ public class CteInsertHandler implements InsertHandler {
 					false,
 					null,
 					null,
-					rowNumberColumn.getJdbcMapping(),
-					factory
+					rowNumberColumn.getJdbcMapping()
 			);
 			final CteColumn idColumn = fullEntityCteTable.getCteColumns().get( 0 );
 			final BasicValuedMapping idType = (BasicValuedMapping) idColumn.getJdbcMapping();
-			final Optimizer optimizer = ( (OptimizableGenerator) entityDescriptor.getIdentifierGenerator() ).getOptimizer();
+			final Optimizer optimizer = ( (OptimizableGenerator) entityDescriptor.getGenerator() ).getOptimizer();
 			final BasicValuedMapping integerType = (BasicValuedMapping) rowNumberColumn.getJdbcMapping();
 			final Expression rowNumberMinusOneModuloIncrement = new BinaryArithmeticExpression(
 					new BinaryArithmeticExpression(
@@ -426,8 +416,7 @@ public class CteInsertHandler implements InsertHandler {
 								new NamedTableReference(
 										baseTableName,
 										"e",
-										false,
-										factory
+										false
 								)
 						)
 				);
@@ -438,7 +427,7 @@ public class CteInsertHandler implements InsertHandler {
 								rowNumberColumnReference
 						)
 				);
-				final String fragment = ( (BulkInsertionCapableIdentifierGenerator) entityDescriptor.getIdentifierGenerator() )
+				final String fragment = ( (BulkInsertionCapableIdentifierGenerator) entityDescriptor.getGenerator() )
 						.determineBulkInsertionIdentifierGenerationSelectFragment(
 								sessionFactory.getSqlStringGenerationContext()
 						);
@@ -461,8 +450,7 @@ public class CteInsertHandler implements InsertHandler {
 				);
 				final CteTable rowsWithSequenceCteTable = new CteTable(
 						ROW_NUMBERS_WITH_SEQUENCE_VALUE,
-						Arrays.asList( rowNumberColumn, idColumn ),
-						sessionFactory
+						List.of( rowNumberColumn, idColumn )
 				);
 				final SelectStatement rowsWithSequenceStatement = new SelectStatement( rowsWithSequenceQuery );
 				final CteStatement rowsWithSequenceCte = new CteStatement(
@@ -484,8 +472,7 @@ public class CteInsertHandler implements InsertHandler {
 						new NamedTableReference(
 								baseTableName,
 								"e",
-								false,
-								factory
+								false
 						),
 						null
 				);
@@ -493,8 +480,7 @@ public class CteInsertHandler implements InsertHandler {
 						new NamedTableReference(
 								ROW_NUMBERS_WITH_SEQUENCE_VALUE,
 								"t",
-								false,
-								factory
+								false
 						)
 				);
 				baseTableGroup.addTableGroupJoin(
@@ -516,8 +502,7 @@ public class CteInsertHandler implements InsertHandler {
 												false,
 												null,
 												null,
-												rowNumberColumn.getJdbcMapping(),
-												factory
+												rowNumberColumn.getJdbcMapping()
 										)
 								)
 						)
@@ -534,8 +519,7 @@ public class CteInsertHandler implements InsertHandler {
 												false,
 												null,
 												null,
-												idColumn.getJdbcMapping(),
-												factory
+												idColumn.getJdbcMapping()
 										),
 										BinaryArithmeticOperator.ADD,
 										new BinaryArithmeticExpression(
@@ -547,8 +531,7 @@ public class CteInsertHandler implements InsertHandler {
 														false,
 														null,
 														null,
-														rowNumberColumn.getJdbcMapping(),
-														factory
+														rowNumberColumn.getJdbcMapping()
 												),
 												integerType
 										),
@@ -557,14 +540,14 @@ public class CteInsertHandler implements InsertHandler {
 						)
 				);
 				final CteTable finalEntityCteTable;
-				if ( targetPathSqmCteColumns.contains( getCteTable().getColumns().get( 0 ) ) ) {
+				if ( targetPathCteColumns.contains( getCteTable().getCteColumns().get( 0 ) ) ) {
 					finalEntityCteTable = entityCteTable;
 				}
 				else {
-					targetPathSqmCteColumns.add( 0, getCteTable().getColumns().get( 0 ) );
-					finalEntityCteTable = BaseSqmToSqlAstConverter.createCteTable(
+					targetPathCteColumns.add( 0, getCteTable().getCteColumns().get( 0 ) );
+					finalEntityCteTable = createCteTable(
 							getCteTable(),
-							targetPathSqmCteColumns,
+							targetPathCteColumns,
 							factory
 					);
 				}
@@ -581,8 +564,7 @@ public class CteInsertHandler implements InsertHandler {
 											false,
 											null,
 											null,
-											cteColumn.getJdbcMapping(),
-											factory
+											cteColumn.getJdbcMapping()
 									)
 							)
 					);
@@ -598,7 +580,7 @@ public class CteInsertHandler implements InsertHandler {
 				statement.addCteStatement( entityCte );
 			}
 		}
-		else if ( !assignsId && entityDescriptor.getIdentifierGenerator() instanceof PostInsertIdentifierGenerator ) {
+		else if ( !assignsId && entityDescriptor.getGenerator().generatedOnExecution() ) {
 			final String baseTableName = "base_" + entityCteTable.getTableExpression();
 			final CteStatement baseEntityCte = new CteStatement(
 					entityCteTable.withName( baseTableName ),
@@ -607,10 +589,10 @@ public class CteInsertHandler implements InsertHandler {
 					CteMaterialization.MATERIALIZED
 			);
 			statement.addCteStatement( baseEntityCte );
-			targetPathSqmCteColumns.add( 0, cteTable.getColumns().get( 0 ) );
-			final CteTable finalEntityCteTable = BaseSqmToSqlAstConverter.createCteTable(
+			targetPathCteColumns.add( 0, cteTable.getCteColumns().get( 0 ) );
+			final CteTable finalEntityCteTable = createCteTable(
 					getCteTable(),
-					targetPathSqmCteColumns,
+					targetPathCteColumns,
 					factory
 			);
 			final QuerySpec finalQuerySpec = new QuerySpec( true );
@@ -645,10 +627,10 @@ public class CteInsertHandler implements InsertHandler {
 
 		final Expression count = createCountStar( factory, sqmConverter );
 		domainResults.add(
-				new BasicResult(
+				new BasicResult<>(
 						0,
 						null,
-						( (SqlExpressible) count).getJdbcMapping().getJavaTypeDescriptor()
+						( (SqlExpressible) count).getJdbcMapping()
 				)
 		);
 		querySpec.getSelectClause().addSqlSelection( new SqlSelectionImpl( 1, 0, count ) );
@@ -658,15 +640,14 @@ public class CteInsertHandler implements InsertHandler {
 								// We want to return the insertion count of the base table
 								baseInsertCte,
 								CTE_TABLE_IDENTIFIER,
-								false,
-								factory
+								false
 						)
 				)
 		);
 
 		// Execute the statement
 		final JdbcServices jdbcServices = factory.getJdbcServices();
-		final SqlAstTranslator<JdbcSelect> translator = jdbcServices.getJdbcEnvironment()
+		final SqlAstTranslator<JdbcOperationQuerySelect> translator = jdbcServices.getJdbcEnvironment()
 				.getSqlAstTranslatorFactory()
 				.buildSelectTranslator( factory, statement );
 		final JdbcParameterBindings jdbcParameterBindings = SqmUtil.createJdbcParameterBindings(
@@ -683,7 +664,7 @@ public class CteInsertHandler implements InsertHandler {
 				},
 				executionContext.getSession()
 		);
-		final JdbcSelect select = translator.translate( jdbcParameterBindings, executionContext.getQueryOptions() );
+		final JdbcOperationQuerySelect select = translator.translate( jdbcParameterBindings, executionContext.getQueryOptions() );
 
 		executionContext.getSession().autoFlushIfRequired( select.getAffectedTableNames() );
 		List<Object> list = jdbcServices.getJdbcSelectExecutor().list(
@@ -712,7 +693,7 @@ public class CteInsertHandler implements InsertHandler {
 	protected String addDmlCtes(
 			CteContainer statement,
 			CteStatement queryCte,
-			List<Map.Entry<SqmCteTableColumn, Assignment>> assignments,
+			List<Map.Entry<List<CteColumn>, Assignment>> assignments,
 			boolean assignsId,
 			MultiTableSqmMutationConverter sqmConverter,
 			Map<SqmParameter<?>, List<List<JdbcParameter>>> parameterResolutions,
@@ -743,12 +724,12 @@ public class CteInsertHandler implements InsertHandler {
 			collectTableReference( updatingTableGroup.getTableReferenceJoins().get( i ), tableReferenceByAlias::put );
 		}
 
-		final Map<TableReference, List<Map.Entry<SqmCteTableColumn, Assignment>>> assignmentsByTable = CollectionHelper.mapOfSize(
+		final Map<TableReference, List<Map.Entry<List<CteColumn>, Assignment>>> assignmentsByTable = CollectionHelper.mapOfSize(
 				updatingTableGroup.getTableReferenceJoins().size() + 1
 		);
 
 		for ( int i = 0; i < assignments.size(); i++ ) {
-			final Map.Entry<SqmCteTableColumn, Assignment> entry = assignments.get( i );
+			final Map.Entry<List<CteColumn>, Assignment> entry = assignments.get( i );
 			final Assignment assignment = entry.getValue();
 			final List<ColumnReference> assignmentColumnRefs = assignment.getAssignable().getColumnReferences();
 
@@ -771,7 +752,7 @@ public class CteInsertHandler implements InsertHandler {
 			}
 			assert assignmentTableReference != null;
 
-			List<Map.Entry<SqmCteTableColumn, Assignment>> assignmentsForTable = assignmentsByTable.get( assignmentTableReference );
+			List<Map.Entry<List<CteColumn>, Assignment>> assignmentsForTable = assignmentsByTable.get( assignmentTableReference );
 			if ( assignmentsForTable == null ) {
 				assignmentsForTable = new ArrayList<>();
 				assignmentsByTable.put( assignmentTableReference, assignmentsForTable );
@@ -793,9 +774,10 @@ public class CteInsertHandler implements InsertHandler {
 				true
 		);
 
-		final IdentifierGenerator identifierGenerator = entityDescriptor.getEntityPersister().getIdentifierGenerator();
-		final List<Map.Entry<SqmCteTableColumn, Assignment>> tableAssignments = assignmentsByTable.get( rootTableReference );
-		if ( ( tableAssignments == null || tableAssignments.isEmpty() ) && !( identifierGenerator instanceof PostInsertIdentifierGenerator ) ) {
+		final Generator identifierGenerator = entityDescriptor.getEntityPersister().getGenerator();
+		final List<Map.Entry<List<CteColumn>, Assignment>> tableAssignments = assignmentsByTable.get( rootTableReference );
+		if ( ( tableAssignments == null || tableAssignments.isEmpty() )
+				&& !identifierGenerator.generatedOnExecution() ) {
 			throw new IllegalStateException( "There must be at least a single root table assignment" );
 		}
 
@@ -810,7 +792,7 @@ public class CteInsertHandler implements InsertHandler {
 					true,
 					true
 			);
-			final List<Map.Entry<SqmCteTableColumn, Assignment>> assignmentList = assignmentsByTable.get( updatingTableReference );
+			final List<Map.Entry<List<CteColumn>, Assignment>> assignmentList = assignmentsByTable.get( updatingTableReference );
 			final NamedTableReference dmlTableReference = resolveUnionTableReference(
 					updatingTableReference,
 					tableExpression
@@ -823,7 +805,7 @@ public class CteInsertHandler implements InsertHandler {
 			final QuerySpec insertSelectSpec = new QuerySpec( true );
 			CteStatement finalCteStatement = null;
 			final CteTable dmlResultCte;
-			if ( i == 0 && !assignsId && identifierGenerator instanceof PostInsertIdentifierGenerator ) {
+			if ( i == 0 && !assignsId && identifierGenerator.generatedOnExecution() ) {
 				// Special handling for identity generation
 				final String cteTableName = getCteTableName( tableExpression, "base_" );
 				if ( statement.getCteStatement( cteTableName ) != null ) {
@@ -836,8 +818,7 @@ public class CteInsertHandler implements InsertHandler {
 								new NamedTableReference(
 										baseTableName,
 										"e",
-										false,
-										factory
+										false
 								)
 						)
 				);
@@ -850,8 +831,7 @@ public class CteInsertHandler implements InsertHandler {
 						false,
 						null,
 						null,
-						rowNumberColumn.getJdbcMapping(),
-						factory
+						rowNumberColumn.getJdbcMapping()
 				);
 				// Insert in the same order as the original tuples came
 				insertSelectSpec.addSortSpecification(
@@ -860,12 +840,9 @@ public class CteInsertHandler implements InsertHandler {
 								SortOrder.ASCENDING
 						)
 				);
-				final List<CteColumn> returningColumns = new ArrayList<>( keyCteColumns.size() + 1 );
-				returningColumns.addAll( keyCteColumns );
 				dmlResultCte = new CteTable(
 						cteTableName,
-						returningColumns,
-						factory
+						keyCteColumns
 				);
 				for ( int j = 0; j < keyColumns.length; j++ ) {
 					returningColumnReferences.add(
@@ -875,8 +852,7 @@ public class CteInsertHandler implements InsertHandler {
 									false,
 									null,
 									null,
-									null,
-									factory
+									null
 							)
 					);
 				}
@@ -891,8 +867,7 @@ public class CteInsertHandler implements InsertHandler {
 						new NamedTableReference(
 								baseTableName,
 								"e",
-								false,
-								factory
+								false
 						),
 						null
 				);
@@ -900,8 +875,7 @@ public class CteInsertHandler implements InsertHandler {
 						new NamedTableReference(
 								getCteTableName( tableExpression ),
 								"t",
-								false,
-								factory
+								false
 						)
 				);
 				baseTableGroup.addTableGroupJoin(
@@ -918,8 +892,7 @@ public class CteInsertHandler implements InsertHandler {
 												false,
 												null,
 												null,
-												rowNumberColumn.getJdbcMapping(),
-												factory
+												rowNumberColumn.getJdbcMapping()
 										)
 								)
 						)
@@ -938,8 +911,7 @@ public class CteInsertHandler implements InsertHandler {
 										false,
 										null,
 										null,
-										idCteColumn.getJdbcMapping(),
-										factory
+										idCteColumn.getJdbcMapping()
 								)
 						)
 				);
@@ -956,8 +928,7 @@ public class CteInsertHandler implements InsertHandler {
 											false,
 											null,
 											null,
-											cteColumn.getJdbcMapping(),
-											factory
+											cteColumn.getJdbcMapping()
 									)
 							)
 					);
@@ -969,8 +940,7 @@ public class CteInsertHandler implements InsertHandler {
 				finalReturningColumns.add( rowNumberColumn );
 				final CteTable finalResultCte = new CteTable(
 						getCteTableName( tableExpression ),
-						finalReturningColumns,
-						factory
+						finalReturningColumns
 				);
 				final QuerySpec finalResultQuery = new QuerySpec( true );
 				finalResultQuery.getFromClause().addRoot(
@@ -978,8 +948,7 @@ public class CteInsertHandler implements InsertHandler {
 							new NamedTableReference(
 									dmlResultCte.getTableExpression(),
 									"e",
-									false,
-									factory
+									false
 							)
 						)
 				);
@@ -990,8 +959,7 @@ public class CteInsertHandler implements InsertHandler {
 						false,
 						null,
 						null,
-						idCteColumn.getJdbcMapping(),
-						factory
+						idCteColumn.getJdbcMapping()
 				);
 				finalResultQuery.getSelectClause().addSqlSelection(
 						new SqlSelectionImpl(
@@ -1000,23 +968,13 @@ public class CteInsertHandler implements InsertHandler {
 								idColumnReference
 						)
 				);
-				final BasicType<Integer> rowNumberType = sessionFactory.getTypeConfiguration()
-						.getBasicTypeForJavaType( Integer.class );
 				finalResultQuery.getSelectClause().addSqlSelection(
 						new SqlSelectionImpl(
 								1,
 								0,
-								new Over<>(
-										new SelfRenderingFunctionSqlAstExpression(
-												"row_number",
-												(appender, args, walker) -> appender.appendSql(
-														"row_number()" ),
-												Collections.emptyList(),
-												rowNumberType,
-												rowNumberType
-										),
-										Collections.emptyList(),
-										Collections.emptyList()
+								SqmInsertStrategyHelper.createRowNumberingExpression(
+										querySpec,
+										sessionFactory
 								)
 						)
 				);
@@ -1040,15 +998,13 @@ public class CteInsertHandler implements InsertHandler {
 								new NamedTableReference(
 										queryCte.getCteTable().getTableExpression(),
 										"e",
-										false,
-										factory
+										false
 								)
 						)
 				);
 				dmlResultCte = new CteTable(
 						cteTableName,
-						keyCteColumns,
-						factory
+						keyCteColumns
 				);
 				for ( int j = 0; j < keyColumns.length; j++ ) {
 					returningColumnReferences.add(
@@ -1058,8 +1014,7 @@ public class CteInsertHandler implements InsertHandler {
 									false,
 									null,
 									null,
-									null,
-									factory
+									null
 							)
 					);
 					insertSelectSpec.getSelectClause().addSqlSelection(
@@ -1072,8 +1027,7 @@ public class CteInsertHandler implements InsertHandler {
 											false,
 											null,
 											null,
-											null,
-											factory
+											null
 									)
 							)
 					);
@@ -1081,13 +1035,13 @@ public class CteInsertHandler implements InsertHandler {
 				insertColumnReferences = returningColumnReferences;
 			}
 
-			final InsertStatement dmlStatement = new InsertStatement(
+			final InsertSelectStatement dmlStatement = new InsertSelectStatement(
 					dmlTableReference,
 					returningColumnReferences
 			);
 			dmlStatement.addTargetColumnReferences( insertColumnReferences );
 			if ( assignmentList != null ) {
-				for ( Map.Entry<SqmCteTableColumn, Assignment> entry : assignmentList ) {
+				for ( Map.Entry<List<CteColumn>, Assignment> entry : assignmentList ) {
 					final Assignment assignment = entry.getValue();
 					// Skip the id mapping here as we handled that already
 					if ( assignment.getAssignedValue().getExpressionType() instanceof EntityIdentifierMapping ) {
@@ -1098,21 +1052,17 @@ public class CteInsertHandler implements InsertHandler {
 					final int size = assignmentReferences.size();
 					for ( int j = 0; j < size; j++ ) {
 						final ColumnReference columnReference = assignmentReferences.get( j );
-						final String columnName = size > 1
-								? entry.getKey().getColumnName() + '_' + i
-								: entry.getKey().getColumnName();
 						insertSelectSpec.getSelectClause().addSqlSelection(
 								new SqlSelectionImpl(
 										1,
 										0,
 										new ColumnReference(
 												"e",
-												columnName,
+												entry.getKey().get( j ).getColumnExpression(),
 												columnReference.isColumnExpressionFormula(),
 												null,
 												null,
-												columnReference.getJdbcMapping(),
-												factory
+												columnReference.getJdbcMapping()
 										)
 								)
 						);
@@ -1124,7 +1074,7 @@ public class CteInsertHandler implements InsertHandler {
 			if ( finalCteStatement != null ) {
 				statement.addCteStatement( finalCteStatement );
 			}
-			if ( i == 0 && !assignsId && identifierGenerator instanceof PostInsertIdentifierGenerator ) {
+			if ( i == 0 && !assignsId && identifierGenerator.generatedOnExecution() ) {
 				// Special handling for identity generation
 				statement.addCteStatement( queryCte );
 			}
@@ -1139,8 +1089,7 @@ public class CteInsertHandler implements InsertHandler {
 			return new NamedTableReference(
 					tableExpression,
 					tableReference.getIdentificationVariable(),
-					tableReference.isOptional(),
-					sessionFactory
+					tableReference.isOptional()
 			);
 		}
 		else {
